--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.4.1",
     "tailwindcss": "^4.0.17"
   },
