--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.4.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
