--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-parallax": "^3.5.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.4.1",
     "swiper": "^11.2.6",
