--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -18,6 +18,7 @@
     "react-parallax": "^3.5.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.4.1",
+    "react-tabs": "^6.1.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.17"
   },
