--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-parallax": "^3.5.2",
     "react-responsive-carousel": "^3.2.23",
