--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -22,6 +22,7 @@
     "react-router": "^7.4.1",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.17"
   },
