--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/react-query": "^5.71.5",
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "react": "^19.0.0",
